Maj index.html et app.js

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
 	<title>Local storage</title>
 	<meta charset="utf-8">
+	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="app.js"></script>
 </head>
 <body>
     <label>Quel age avez vous? :</label>
     <input type="text" id="age"/>
     <button id="button" type="button">Valider</button>
 
-
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-	<script src="app.js"></script>
+    <p>
+       <label></label>
+       <textarea  id="retour"></textarea>
+   </p>
  
 
 </body>
